--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
   "dependencies": {
     "handlebars": "^4.0.5",
     "hapi": "^12.1.0",
+    "hapi-auth-cookie": "^5.0.0",
     "hoek": "^3.0.4",
     "inert": "^3.2.0",
+    "jsonwebtoken": "^5.5.4",
     "path": "^0.12.7",
     "vision": "^4.0.1"
   }
