--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "louie": {
     "versionName": "The Kingsmen",
-    "versionVideoUrl": "https://www.youtube.com/watch?v=4V1p1dM3snQ"
+    "versionVideoUrl": "https://www.youtube.com/watch?v=4V1p1dM3snQ",
+    "dusteNavn": "Min elev"
   },
   "repository": {
     "type": "git",
