--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "hoek": "^3.0.4",
     "inert": "^3.2.0",
     "jsonwebtoken": "^5.5.4",
+    "ldapauth-fork": "^2.5.2",
     "path": "^0.12.7",
     "vision": "^4.0.1"
   }
