Changes name to MinElev. Implemements new config

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "louie": {
     "versionName": "The Kingsmen",
     "versionVideoUrl": "https://www.youtube.com/watch?v=4V1p1dM3snQ",
-    "dusteNavn": "Min elev"
+    "dusteNavn": "MinElev"
   },
   "repository": {
     "type": "git",
