--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "inert": "^3.2.0",
     "jsonwebtoken": "^5.5.4",
     "ldapauth-fork": "^2.5.2",
+    "mongojs": "^2.3.0",
     "path": "^0.12.7",
     "vision": "^4.0.1"
   }
