--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ webserver:
     LDAP_BIND_CREDENTIALS: "password"
     LDAP_SEARCH_BASE: "dc=example,dc=com"
     LDAP_SEARCH_FILTER: "(uid={{username}})"
+    # LDAP_TLS_REJECT_UNAUTHORIZED: true
+    # LDAP_TLS_CA_PATH: secretpath/secretfile.cer
   ports:
     - "80:80"
     - "3000:3000"
