--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "standard && tap --reporter=spec test/*.js",
     "coverage": "tap test/*.js --coverage",
     "coveralls": "tap --cov --coverage-report=lcov test/*.js && cat coverage/lcov.info | coveralls",
-    "setup": "npm install && node setup.js"
+    "setup": "npm install && node setup.js",
+    "generate-test-token": "node utils/generate-test-token.js"
   },
   "keywords": [
     "Louie"
