--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ldapauth-fork": "^2.5.2",
     "mongojs": "^2.3.0",
     "path": "^0.12.7",
-    "vision": "^4.0.1"
+    "vision": "^4.0.1",
+    "wreck": "^7.0.0"
   }
 }
